@@ -76,6 +76,10 @@ Enhancements:
   - Badupload test previously did not have an else in the try-except. The
     test passed if the except was triggered, but would also pass if the
     test did not trigger an error at all.
+* Fixed bug 1406173 by applying patch supplied in report
+  - Ignore .par2 files in remote file list
+* Removed redundant shell test testing/verify_test.sh
+
 
 New in v0.7.00 (2014/10/23)
 ---------------------------
